Added that scroll arrow to Page One

--- a/app/index.htm
+++ b/app/index.htm
@@ -22,7 +22,10 @@
                 <div class="hero">
                     <div class="hero-title">Simon Adcock</div>
                     <img src="img/simon_adcock.jpg">
-                    <div class="hero-supplemental">A London based front end developer</div>
+                    <div class="hero-supplemental">
+                        <p>A London based front end developer</p>
+                        <i class="fa fa-3x fa-arrow-circle-o-down"></i>
+                    </div>
                 </div>
 
             </section>
